[build-system]
requires = ["setuptools >= 59.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = false

[[tool.mypy.overrides]]
module = [
    "diskcache.*",
    "pymongo.*",
    "pydantic.*",
    "transformers.*"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
