[metadata]
name = rxn_utilities
version = attr: rxn_utilities.__version__
description = General utilities (not related to chemistry)
author = IBM RXN team
long_description = file: README.md

[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    attrs>=21.2.0
    click>=7.0
    diskcache>=5.2.1
    typing-extensions>=4.1.1

[options.package_data]
rxn_utilities =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.10.1
    mypy>=0.910
    pytest-cov>=2.8.1
    pytest>=7.0.1
    types-setuptools>=57.4.14

[options.entry_points]
console_scripts =
    rxn-stable-shuffle = rxn_utilities.scripts.stable_shuffle:main

[flake8]
extend-ignore = E203, E501
