[metadata]
name = rxn-utils
version = attr: rxn.utilities.__version__
description = General utilities (not related to chemistry)
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    attrs>=21.2.0
    click>=8.0
    diskcache>=5.2.1
    pydantic[dotenv]>=1.9.0
    pymongo>=3.9.0
    tqdm>=4.31.0
    typing-extensions>=4.1.1

[options.packages.find]
where = src

[options.package_data]
rxn.utilities =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.10.1
    mypy>=0.910
    pytest-cov>=2.8.1
    pytest>=7.0.1
    types-setuptools>=57.4.14
    types-tqdm>=4.64.0

[options.entry_points]
console_scripts =
    rxn-extract-csv-column = rxn.utilities.scripts.extract_csv_column:main
    rxn-stable-shuffle = rxn.utilities.scripts.stable_shuffle:main

[flake8]
extend-ignore = E203, E501
